sandbox/output
Timing.java:57: error: cannot find symbol
                            MySupplier<A> code) {
                            ^
  symbol:   class MySupplier
  location: class Timing
Timing.java:63: error: cannot find symbol
                            MySupplier<A> code) {
                            ^
  symbol:   class MySupplier
  location: class Timing
ProfitJava6.java:10: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
ProfitJava6.java:18: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
ProfitJava6.java:27: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
5 errors
